[workspace]
resolver = "2"
members = [
    "crates/pulse_cdt",
    "contracts",
    "contracts/pulse_token",
    "contracts/pulse_system",
    "crates/pulse_name",
    "crates/pulse_proc_macro",
    "crates/pulse_serialization",
    "test-contracts",
    "test-contracts/test_api_db"
, "crates/pulse_bytes"]

[workspace.dependencies]
pulse_cdt = { version = "=0.1.0", path = "crates/pulse_cdt", default-features = false }
pulse_proc_macro = { version = "=0.1.0", path = "crates/pulse_proc_macro", default-features = false }
pulse_name = { version = "=0.1.0", path = "crates/pulse_name", default-features = false }
pulse_serialization = { version = "=0.1.0", path = "crates/pulse_serialization", default-features = false }
pulse_token = { version = "=0.1.0", path = "contracts/pulse_token", default-features = false }
pulse_system = { version = "=0.1.0", path = "contracts/pulse_system", default-features = false }
pulse_bytes = { version = "=0.1.0", path = "crates/pulse_bytes", default-features = false }

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.dev]
panic = "abort"
