[package]
name = "pulse_system"
version = "0.1.0"
edition = "2024"

[dependencies]
pulse_cdt = { workspace = true }
libm = { version = "0.2" }

[build-dependencies]
syn = { version = "1", features = ["full"] }
quote = "1.0"
serde_json = "1.0"
heck = "0.4"

[lib]
crate-type = ["cdylib"]

[features]
default = ["contract-entry"]
contract-entry = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
