[package]
name = "pulse_cdt"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = { version = "0.14", default-features = false }
pulse_serialization = { workspace = true }
pulse_proc_macro = { workspace = true }
pulse_name = { workspace = true }
pulse_bytes = { workspace = true }
serde_json = "1.0"
lol_alloc = "0.4"
dlmalloc = { version = "0.2", features = ["global"] }

[profile.dev]
panic ="abort"

[profile.release]
panic ="abort"