[package]
name = "pulse_proc_macro"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.13", features = ["full"] }
inventory = "0.3"
heck = "0.5.0"
pulse_name = { workspace = true }

[dev-dependencies]
pulse = { version = ">= 0.1", path = "../pulse" }

[lib]
proc-macro = true
