[package]
name = "pulse_proc_macro"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1.0.13", features = ["full"] }
inventory = "0.3"
heck = "0.5.0"
pulse_name = { workspace = true }
pulse_bytes = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
lol_alloc = "0.4.1"

[dev-dependencies]
pulse_cdt = { path = "../pulse_cdt" }

[lib]
proc-macro = true
